--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
 
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -35,7 +37,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NewTodoActivity"
+            android:name=".NewNoteActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
