--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -22,14 +22,15 @@
     <uses-permission android:name="com.parse.homenote.permission.C2D_MESSAGE" />
 
     <application
-        android:name=".TodoListApplication"
+        android:name=".HomeNoteApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light" >
         <activity
-            android:name=".TodoListActivity"
-            android:label="@string/app_name" >
+            android:name=".NoteListActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,7 +39,8 @@
         </activity>
         <activity
             android:name=".NewNoteActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name="com.parse.ui.ParseLoginActivity"
