Updated timestamp display and ordering fixed delete issues added cloud code

--- a/homenote_app/build.gradle
+++ b/homenote_app/build.gradle
@@ -21,4 +21,10 @@ android {
             res.srcDirs = ['res']
         }
     }
+
+    buildTypes {
+        debug {
+            debuggable true
+        }
+    }
 }
