--- a/homenote_app/build.gradle
+++ b/homenote_app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'android'
 dependencies {
     compile project(':ParseLoginUI')
     compile 'com.android.support:support-v4:21.0.0'
+    compile "com.splitwise:tokenautocomplete:1.3.1@aar"
 }
 
 android {
